--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,6 +21,14 @@
   font-family: var(--font-main);
 }
 
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden; /* Verhindert horizontales Scrollen */
+}
+
 button {
     appearance: none;
     border: none;
@@ -30,3 +38,4 @@ button {
     font: inherit;
     cursor: pointer;
 }
+
